tests/ui/delegation/generics/mapping/inherent-impl-to-trait.stderr
error[E0283]: type annotations needed
  --> $DIR/inherent-impl-to-trait.rs:29:9
   |
LL |         S::<'static, 'static, 'static, i32, i32>::foo(&s);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the method `foo`
   |
   = note: cannot satisfy `_: ToString`
note: required by a bound in `test_1::S::<'a, 'b, 'c, A, B>::foo`
  --> $DIR/inherent-impl-to-trait.rs:15:20
   |
LL |     trait Trait<T: ToString> {
   |                    ^^^^^^^^ required by this bound in `S::<'a, 'b, 'c, A, B>::foo`
...
LL |         reuse Trait::<String>::foo { &self.0 }
   |                                --- required by a bound in this associated function
help: consider specifying the generic argument
   |
LL |         S::<'static, 'static, 'static, i32, i32>::foo::<T>(&s);
   |                                                      +++++

error[E0284]: type annotations needed
  --> $DIR/inherent-impl-to-trait.rs:52:9
   |
LL |         S::<'static, 'static, 'static, i32, i32>::foo(&s);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer the value of the const parameter `B` declared on the method `foo`
   |
note: required by a const generic parameter in `test_2::S::<'a, 'b, 'c, A, B>::foo`
  --> $DIR/inherent-impl-to-trait.rs:38:28
   |
LL |     trait Trait<'x, 'y, T, const B: bool> {
   |                            ^^^^^^^^^^^^^ required by this const generic parameter in `S::<'a, 'b, 'c, A, B>::foo`
...
LL |         reuse Trait::<'a, 'b, String, true>::foo { &self.0 }
   |                                              --- required by a bound in this associated function
help: consider specifying the generic arguments
   |
LL |         S::<'static, 'static, 'static, i32, i32>::foo::<T, B>(&s);
   |                                                      ++++++++

error[E0284]: type annotations needed
  --> $DIR/inherent-impl-to-trait.rs:54:11
   |
LL |         s.foo();
   |           ^^^ cannot infer the value of the const parameter `B` declared on the method `foo`
   |
note: required by a const generic parameter in `test_2::S::<'a, 'b, 'c, A, B>::foo`
  --> $DIR/inherent-impl-to-trait.rs:38:28
   |
LL |     trait Trait<'x, 'y, T, const B: bool> {
   |                            ^^^^^^^^^^^^^ required by this const generic parameter in `S::<'a, 'b, 'c, A, B>::foo`
...
LL |         reuse Trait::<'a, 'b, String, true>::foo { &self.0 }
   |                                              --- required by a bound in this associated function
help: consider specifying the generic arguments
   |
LL |         s.foo::<T, B>();
   |              ++++++++

error[E0282]: type annotations needed
  --> $DIR/inherent-impl-to-trait.rs:142:9
   |
LL |         S::<'static, 'static, 'static, i32, i32>::foo(&s);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `A` declared on the method `foo`
   |
help: consider specifying the generic arguments
   |
LL |         S::<'static, 'static, 'static, i32, i32>::foo::<A, B, C>(&s);
   |                                                      +++++++++++

error[E0282]: type annotations needed
  --> $DIR/inherent-impl-to-trait.rs:165:9
   |
LL |         S::<'static, 'static, 'static, i32, i32>::foo(&s);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `A` declared on the method `foo`
   |
help: consider specifying the generic arguments
   |
LL |         S::<'static, 'static, 'static, i32, i32>::foo::<A, B, C>(&s);
   |                                                      +++++++++++

error[E0282]: type annotations needed
  --> $DIR/inherent-impl-to-trait.rs:188:9
   |
LL |         S::<'static, 'static, 'static, i32, i32>::foo(&s);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `X` declared on the method `foo`
   |
help: consider specifying the generic arguments
   |
LL |         S::<'static, 'static, 'static, i32, i32>::foo::<X, Y, Z, A, B, C>(&s);
   |                                                      ++++++++++++++++++++

error[E0282]: type annotations needed
  --> $DIR/inherent-impl-to-trait.rs:212:9
   |
LL |         S::<'static, 'static, 'static, i32, i32>::foo(&s);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `X` declared on the method `foo`
   |
help: consider specifying the generic arguments
   |
LL |         S::<'static, 'static, 'static, i32, i32>::foo::<X, Y, Z, A, B, C>(&s);
   |                                                      ++++++++++++++++++++

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0282, E0283, E0284.
For more information about an error, try `rustc --explain E0282`.
